fixing align

--- a/public/assets/scss/default/_spacing.scss
+++ b/public/assets/scss/default/_spacing.scss
@@ -22,7 +22,7 @@
 }
 
 .section-gap-equal {
-    padding: 120px 0 0 0;
+    padding: 120px 0 ;
     @media #{$md-layout} {
         padding: 100px 0;
     }
